style added to body

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@700&family=Dancing+Script&family=Noto+Serif&family=Sarabun:ital,wght@0,100;0,300;1,100;1,500&family=Secular+One&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Sarabun', sans-serif; 
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Sarabun', sans-serif;
 }
 
+body {
+    height: 100vh;
+    background: linear-gradient(180deg, rgb(59, 59, 214), rgb(42, 144, 179), rgb(167, 84, 167));
+}
