--- a/style.css
+++ b/style.css
@@ -23,3 +23,21 @@ body {
     border-radius: 8px;
     box-shadow: 4px 4px black, -4px -4px black;
 }
+
+.display {
+    width: 100%;
+}
+
+.display input {
+    width: 100%;
+    padding: 15px 10px;
+    text-align: right;
+    border: none;
+    background-color: transparent;
+    color: #ffff;
+    font-size: 40px;
+}
+
+.display input::placeholder {
+    color: lightcyan;
+}
