--- a/style.css
+++ b/style.css
@@ -41,3 +41,33 @@ body {
 .display input::placeholder {
     color: lightcyan;
 }
+
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-top: 40px;
+}
+
+.buttons input[type="button"] {
+    font-size: 30px;
+    padding: 17px;
+    border: none;
+    background-color: transparent;
+    color: #ffff;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.buttons input[type="button"]:hover {
+    box-shadow: 0 8px 25px #000d2e;
+}
+
+input[type="button"]#equal {
+    grid-row: span 2;
+    background-color: #f9544c;
+}
+
+input[type="button"][value="0"] {
+    grid-column: span 2;
+}
