--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
     top: 50%;
     left: 50%;
     border-radius: 8px;
-    box-shadow: 4px 4px black, -4px -4px black;
+    /* box-shadow: 4px 4px black, -4px -4px black; */
+    box-shadow: 0 20px 50px rgba(0, 5, 24, 0.4);
 }
 
 .display {
